plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.vanatta.helene'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mustache'

	implementation 'org.jdbi:jdbi3-core:3.47.0'
	implementation 'org.jdbi:jdbi3-sqlobject:3.47.0'
	implementation 'com.zaxxer:HikariCP:6.1.0'
	implementation 'de.siegmar:fastcsv:3.4.0'
	implementation 'com.google.code.gson:gson:2.11.0'

	runtimeOnly 'org.postgresql:postgresql:42.7.4'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.26.3'
}

test {
	useJUnitPlatform()
}

